attempt number 1 to fix the scrollbar

--- a/src/components/add-game.scss
+++ b/src/components/add-game.scss
@@ -1,8 +1,7 @@
 .add-game {
-  background-color: hsla(0, 0, 100%, 0.05);
   display: flex;
   padding: 0.5rem;
-  margin-bottom: 1rem;
+  padding-bottom: 1.5rem;
 
   .text-input {
     flex-grow: 1;
