--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -49,6 +49,7 @@ input[type='number'] {
   flex-grow: 1;
   height: 100%;
   overflow-y: auto;
+  background-color: var(--background-color); /* for scrollbar */
 }
 
 .sidebar {
