--- a/src/components/game-list.scss
+++ b/src/components/game-list.scss
@@ -1,3 +1,4 @@
 .game-list {
   overflow-y: auto;
+  background-color: #222; /* for scrollbar */
 }
